# tp-lab-4

./: .gitignore  .travis.yml  CMakeLists.txt
content/: menu.txt
ext/gtest-1.8.0/googlemock/msvc/2005/: gmock.sln  gmock.vcproj  gmock_config.vsprops  gmock_main.vcproj  gmock_test.vcproj
ext/gtest-1.8.0/googlemock/msvc/2010/: gmock.sln  gmock.vcxproj  gmock_config.props  gmock_main.vcxproj  gmock_test.vcxproj
ext/gtest-1.8.0/googletest/codegear/: gtest.cbproj  gtest.groupproj  gtest_all.cc  gtest_link.cc  gtest_main.cbproj  gtest_unittest.cbproj
ext/gtest-1.8.0/googletest/msvc/: gtest-md.sln  gtest-md.vcproj  gtest.sln  gtest.vcproj  gtest_main-md.vcproj  gtest_main.vcproj  gtest_prod_test-md.vcproj  gtest_prod_test.vcproj  gtest_unittest-md.vcproj  gtest_unittest.vcproj
include/: Automata.h  Automato.h  Header.h  STATES.h  automata.h  headers.h  task.h
src/: Automata.cpp  Automato.cpp  Automato.h  Source.cpp  automata.cpp  main.cpp  main1.cpp  task.cpp  task1.cpp
test/: tests.cpp
